--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
-    <script src="js/knockout-paged-list.js"></script>
+    <script src="js/knockout-paged-list-1.0.5.js"></script>
 
     <!-- Your view model -->
     <script src="js/ViewModel.js"></script>
